trying to make travis play nice with icu lib

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ rvm:
   - 1.9.3
   - jruby-19mode # JRuby in 1.9 mode
   - 2.0.0
+before_script: apt-get install libicu-dev
 script: bundle exec rspec spec
