trying to make travis play nice with icu lib

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ rvm:
   - 1.9.3
   - jruby-19mode # JRuby in 1.9 mode
   - 2.0.0
-before_script: apt-get install libicu-dev
+before_install:
+  - sudo apt-get install -qq libicu-dev
 script: bundle exec rspec spec
