tidying up code via rubocop feedback and upgrading to ruby 2.4

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,17 @@ Style/ParallelAssignment:
 
 Documentation:
   Enabled: false
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Metrics/MethodLength:
+  Exclude:
+    - 'Rakefile'
+    - '**/*.rake'
+    - 'spec/**/*.rb'
+Metrics/BlockLength:
+  Exclude:
+    - 'Rakefile'
+    - '**/*.rake'
+    - 'spec/**/*.rb'
